mlflow/04-route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: mlflow
  namespace: mlflow
  labels:
    app: mlflow
spec:
  to:
    kind: Service
    name: mlflow
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
